--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -57,7 +57,7 @@
   <button id="btnModificacion" type="button">Modificacion Carrera</button>
   <br>
   <!-- Dar de alta una carrera -->
-  <form class="alta">
+  <form id="form_alta">
     <div class="alta">
       <!-- Titulo -->
       <h1>Alta de carrera</h1>
@@ -74,51 +74,55 @@
     </div>
   </form>
   <!-- Dar de baja una carrera -->
-  <div class="baja">
-    <!-- Titulo -->
-    <h1>Baja de carrera</h1>
-    <br>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2">
-          <!-- Input de Carrera -->
-          <label>Nombre de la Carrera</label>
-          <select class="carrera" id="carrera_baja">
-            <option></option>
-          </select>
+  <form id="form_baja">
+    <div class="baja">
+      <!-- Titulo -->
+      <h1>Baja de carrera</h1>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2">
+            <!-- Input de Carrera -->
+            <label>Nombre de la Carrera</label>
+            <select class="carrera" id="carrera_baja">
+              <option></option>
+            </select>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Modificar una carrera -->
-  <div class="modificacion">
-    <!-- Titulo -->
-    <h1>Modificacion de carrera</h1>
-    <br>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2">
-          <!-- Input de Carrera -->
-          <label>Nombre de la Carrera</label>
-          <select class="carrera" id="carrera_modificacion">
-            <option></option>
-          </select>
+  </form>
+    <!-- Modificar una carrera -->
+    <form id="form_modificacion">
+      <div class="modificacion">
+        <!-- Titulo -->
+        <h1>Modificacion de carrera</h1>
+        <br>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-2">
+              <!-- Input de Carrera -->
+              <label>Nombre de la Carrera</label>
+              <select class="carrera" id="carrera_modificacion">
+                <option></option>
+              </select>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <!-- Boton para guardar datos -->
-  <input id="operacion" type="text" style="display:none;">
-  <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
-  <script src="../js/register.js"></script>
-  <script src="../js/login.js"></script>
-  <script src="../js/library.js"></script>
-  <script src="../js/common.js"></script>
-  <script>
-    function myFunction() {
-      var rc = new RegisterControllerRemote;
-      var operacion = $("#operacion").val();
-      var json = rc.armarJson("carreras", operacion);
+    </form>
+      <!-- Boton para guardar datos -->
+      <input id="operacion" type="text" style="display:none;">
+      <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
+      <script src="../js/register.js"></script>
+      <script src="../js/login.js"></script>
+      <script src="../js/library.js"></script>
+      <script src="../js/common.js"></script>
+      <script>
+        function myFunction() {
+          var rc = new RegisterControllerRemote;
+          var operacion = $("#operacion").val();
+          var json = rc.armarJson("carreras", operacion);
       console.log(json);
     }
   </script>
