--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -54,7 +54,7 @@
     <button id="btnModificacion" type="button">Modificacion Catedra</button>
     <br>
     <!-- Dar de alta una catedra -->
-    <form class="alta">
+    <form id="form_alta">
         <div class="alta">
             <!-- Titulo -->
             <h1>Alta de Catedra</h1>
@@ -148,44 +148,46 @@
         </div>
     </form>
     <!-- Dar de baja una catedra -->
-    <div class="baja">
-        <!-- Titulo -->
-        <h1>Baja de Catedra</h1>
-        <br>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <!-- Seleccion de Catedras -->
-                    <label>Catedras</label>
-                    <select class="catedra" id="catedra_baja">
-                        <option></option>
-                    </select>
-                </div>
-                <div class="col-md-4">
-                    <!-- Seleccion de materia -->
-                    <label>Materia</label>
-                    <select class="materia" id="materia_baja">
-                        <option></option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Modificar una catedra -->
-    <form class="modificacion">
-        <div class="modificacion">
-            <h1>Modificacion de Catedra</h1>
+    <form id="form_baja">
+        <div class="baja">
+            <!-- Titulo -->
+            <h1>Baja de Catedra</h1>
             <br>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
                         <!-- Seleccion de Catedras -->
                         <label>Catedras</label>
-                        <select class="catedra" id="catedra_modificacion">
+                        <select class="catedra" id="catedra_baja">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-4">
+                        <!-- Seleccion de materia -->
+                        <label>Materia</label>
+                        <select class="materia" id="materia_baja">
+                            <option></option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+        <!-- Modificar una catedra -->
+        <form id="form_modificacion">
+            <div class="modificacion">
+                <h1>Modificacion de Catedra</h1>
+                <br>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <!-- Seleccion de Catedras -->
+                            <label>Catedras</label>
+                            <select class="catedra" id="catedra_modificacion">
+                                <option></option>
+                            </select>
+                        </div>
+                        <div class="col-md-4">
                         <!-- Seleccion de materia -->
                         <label>Materia</label>
                         <select class="materia" id="materia_modificacion">
