--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -56,7 +56,7 @@
   <button id="btnModificacion" type="button">Modificacion Fichada</button>
   <br>
   <!-- Dar de alta una fichada -->
-  <form class="alta">
+  <form id="form_alta">
     <div class="alta">
       <!-- Titulo -->
       <h1>Alta de Fichada</h1>
@@ -136,159 +136,163 @@
     </div>
   </form>
   <!-- Dar de baja una fichada -->
-  <div class="baja">
-    <!-- Titulo -->
-    <h1>Baja de Fichada</h1>
-    <br>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <!-- Seleccion de Catedra -->
-          <label>Catedra</label>
-          <select class="catedra" id="catedra_baja">
-            <option></option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Carrera -->
-          <label>Carrera</label>
-          <select class="carrera" id="carrera_baja">
-            <option></option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Materia -->
-          <label>Materia</label>
-          <select class="materia" id="materia_baja">
-            <option></option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de dias -->
-          <label>Dias</label>
-          <select class="dia" id="dia_baja">
+  <form id="form_baja">
+    <div class="baja">
+      <!-- Titulo -->
+      <h1>Baja de Fichada</h1>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <!-- Seleccion de Catedra -->
+            <label>Catedra</label>
+            <select class="catedra" id="catedra_baja">
+              <option></option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <!-- Seleccion de Carrera -->
+            <label>Carrera</label>
+            <select class="carrera" id="carrera_baja">
+              <option></option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <!-- Seleccion de Materia -->
+            <label>Materia</label>
+            <select class="materia" id="materia_baja">
+              <option></option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <!-- Seleccion de dias -->
+            <label>Dias</label>
+            <select class="dia" id="dia_baja">
               <option value="0">Lunes</option>
               <option value="1">Martes</option>
               <option value="2">Miercoles</option>
               <option value="3">Jueves</option>
               <option value="4">Viernes</option>
               <option value="5">Sabado</option>
-          </select>
-      </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Horario -->
-          <label>Horario</label>
-          <select class="horario" id="horario_baja">
-            <option value="0">7:00hs</option>
-            <option value="1">8:00hs</option>
-            <option value="2">9:00hs</option>
-            <option value="3">10:00hs</option>
-            <option value="4">11:00hs</option>
-            <option value="5">12:00hs</option>
-            <option value="6">13:00hs</option>
-            <option value="7">14:00hs</option>
-            <option value="8">15:00hs</option>
-            <option value="9">16:00hs</option>
-            <option value="A">17:00hs</option>
-            <option value="B">18:00hs</option>
-            <option value="C">19:00hs</option>
-            <option value="D">20:00hs</option>
-            <option value="E">21:00hs</option>
-            <option value="F">22:00hs</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Alumno -->
-          <label>Alumno</label>
-          <select class="alumnos" id="alumno_baja">
-            <option></option>
-          </select>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Modificar una catedra -->
-  <div class="modificacion">
-    <!-- Titulo -->
-    <h1>Modificacion de Fichadas</h1>
-    <br>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <!-- Seleccion de Catedra -->
-          <label>Catedra</label>
-          <select class="catedra" id="catedra_modificacion">
-            <option></option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Carrera -->
-          <label>Carrera</label>
-          <select class="carrera" id="carrera_modificacion">
-            <option></option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Materia -->
-          <label>Materia</label>
-          <select class="materia" id="materia_modificacion">
-            <option></option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de dias -->
-          <label>Dias</label>
-          <select class="dia" id="dia_modificacion">
-              <option value="0">Lunes</option>
-              <option value="1">Martes</option>
-              <option value="2">Miercoles</option>
-              <option value="3">Jueves</option>
-              <option value="4">Viernes</option>
-              <option value="5">Sabado</option>
-          </select>
-      </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Horario -->
-          <label>Horario</label>
-          <select class="horario" id="horario_modificacion">
-            <option value="0">7:00hs</option>
-            <option value="1">8:00hs</option>
-            <option value="2">9:00hs</option>
-            <option value="3">10:00hs</option>
-            <option value="4">11:00hs</option>
-            <option value="5">12:00hs</option>
-            <option value="6">13:00hs</option>
-            <option value="7">14:00hs</option>
-            <option value="8">15:00hs</option>
-            <option value="9">16:00hs</option>
-            <option value="A">17:00hs</option>
-            <option value="B">18:00hs</option>
-            <option value="C">19:00hs</option>
-            <option value="D">20:00hs</option>
-            <option value="E">21:00hs</option>
-            <option value="F">22:00hs</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Alumno -->
-          <label>Alumno</label>
-          <select class="alumnos" id="alumnos_modificacion">
-            <option></option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <!-- Seleccion de Presente -->
-          <label class="radioPresente">Presente
-            <input type="radio" name="postage" value="true" id="radioPresente_si_modificacion"> Si
-            <input type="radio" name="postage" value="false" id="radioPresente_no_modificacion"> No</label>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <!-- Seleccion de Horario -->
+            <label>Horario</label>
+            <select class="horario" id="horario_baja">
+              <option value="0">7:00hs</option>
+              <option value="1">8:00hs</option>
+              <option value="2">9:00hs</option>
+              <option value="3">10:00hs</option>
+              <option value="4">11:00hs</option>
+              <option value="5">12:00hs</option>
+              <option value="6">13:00hs</option>
+              <option value="7">14:00hs</option>
+              <option value="8">15:00hs</option>
+              <option value="9">16:00hs</option>
+              <option value="A">17:00hs</option>
+              <option value="B">18:00hs</option>
+              <option value="C">19:00hs</option>
+              <option value="D">20:00hs</option>
+              <option value="E">21:00hs</option>
+              <option value="F">22:00hs</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <!-- Seleccion de Alumno -->
+            <label>Alumno</label>
+            <select class="alumnos" id="alumno_baja">
+              <option></option>
+            </select>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Botoon para guardar datos -->
-  <input id="operacion" type="text" style="display:none;">
-  <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
-  <input style="display: none;" type="text" id="presente">
+  </form>
+    <!-- Modificar una catedra -->
+    <form id="form_modificacion">
+      <div class="modificacion">
+        <!-- Titulo -->
+        <h1>Modificacion de Fichadas</h1>
+        <br>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <!-- Seleccion de Catedra -->
+              <label>Catedra</label>
+              <select class="catedra" id="catedra_modificacion">
+                <option></option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <!-- Seleccion de Carrera -->
+              <label>Carrera</label>
+              <select class="carrera" id="carrera_modificacion">
+                <option></option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <!-- Seleccion de Materia -->
+              <label>Materia</label>
+              <select class="materia" id="materia_modificacion">
+                <option></option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <!-- Seleccion de dias -->
+              <label>Dias</label>
+              <select class="dia" id="dia_modificacion">
+                <option value="0">Lunes</option>
+                <option value="1">Martes</option>
+                <option value="2">Miercoles</option>
+                <option value="3">Jueves</option>
+                <option value="4">Viernes</option>
+                <option value="5">Sabado</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <!-- Seleccion de Horario -->
+              <label>Horario</label>
+              <select class="horario" id="horario_modificacion">
+                <option value="0">7:00hs</option>
+                <option value="1">8:00hs</option>
+                <option value="2">9:00hs</option>
+                <option value="3">10:00hs</option>
+                <option value="4">11:00hs</option>
+                <option value="5">12:00hs</option>
+                <option value="6">13:00hs</option>
+                <option value="7">14:00hs</option>
+                <option value="8">15:00hs</option>
+                <option value="9">16:00hs</option>
+                <option value="A">17:00hs</option>
+                <option value="B">18:00hs</option>
+                <option value="C">19:00hs</option>
+                <option value="D">20:00hs</option>
+                <option value="E">21:00hs</option>
+                <option value="F">22:00hs</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <!-- Seleccion de Alumno -->
+              <label>Alumno</label>
+              <select class="alumnos" id="alumnos_modificacion">
+                <option></option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <!-- Seleccion de Presente -->
+              <label class="radioPresente">Presente
+                <input type="radio" name="postage" value="true" id="radioPresente_si_modificacion"> Si
+                <input type="radio" name="postage" value="false" id="radioPresente_no_modificacion"> No</label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+        <!-- Botoon para guardar datos -->
+        <input id="operacion" type="text" style="display:none;">
+        <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
+        <input style="display: none;" type="text" id="presente">
   <script src="../js/register.js"></script>
   <script src="../js/login.js"></script>
   <script src="../js/library.js"></script>
