fix myFunction abmUsuarios

--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -224,7 +224,7 @@
         function myFunction() {
             var rc = new RegisterControllerRemote;
             var operacion = $("#operacion").val();
-            var json = rc.armarJson("usuarios", operacion);
+            var json = rc.armarJson("usuario", operacion);
             console.log(json);
         }
     </script>
