Puestos IDs en boton submit

--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -146,6 +146,7 @@
                 </div>
             </div>
         </div>
+        <button onclick="myFunction()" type="submit" id="submit_alta">Guardar</button>
     </form>
     <!-- Dar de baja una catedra -->
     <form id="form_baja">
@@ -172,6 +173,7 @@
                 </div>
             </div>
         </div>
+        <button onclick="myFunction()" type="submit" id="submit_baja">Guardar</button>
     </form>
         <!-- Modificar una catedra -->
         <form id="form_modificacion">
@@ -267,10 +269,10 @@
                 </div>
             </div>
         </div>
+        <button onclick="myFunction()" type="submit" id="submit_modificacion">Guardar</button>
     </form>
     <!-- Boton para guardar datos -->
     <input id="operacion" type="text" style="display:none;">
-    <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
     <script src="../js/register.js"></script>
     <script src="../js/login.js"></script>
     <script src="../js/library.js"></script>
