--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -72,6 +72,7 @@
         </div>
       </div>
     </div>
+    <button onclick="myFunction()" type="submit" id="submit_alta">Guardar</button>
   </form>
   <!-- Dar de baja una carrera -->
   <form id="form_baja">
@@ -91,6 +92,7 @@
         </div>
       </div>
     </div>
+    <button onclick="myFunction()" type="submit" id="submit_baja">Guardar</button>
   </form>
     <!-- Modificar una carrera -->
     <form id="form_modificacion">
@@ -110,10 +112,10 @@
           </div>
         </div>
       </div>
+      <button onclick="myFunction()" type="submit" id="submit_modificacion">Guardar</button>
     </form>
       <!-- Boton para guardar datos -->
       <input id="operacion" type="text" style="display:none;">
-      <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
       <script src="../js/register.js"></script>
       <script src="../js/login.js"></script>
       <script src="../js/library.js"></script>
