--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -130,11 +130,12 @@
             <label class="radioPresente">Presente
               <input type="radio" name="postage" value="true" id="radioPresente_si_alta"> Si
               <input type="radio" name="postage" value="false" id="radioPresente_no_alta"> No</label>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </form>
+      <button onclick="myFunction()" type="submit" id="submit_alta">Guardar</button>
+    </form>
   <!-- Dar de baja una fichada -->
   <form id="form_baja">
     <div class="baja">
@@ -208,6 +209,7 @@
         </div>
       </div>
     </div>
+    <button onclick="myFunction()" type="submit" id="submit_baja">Guardar</button>
   </form>
     <!-- Modificar una catedra -->
     <form id="form_modificacion">
@@ -288,10 +290,10 @@
             </div>
           </div>
         </div>
+        <button onclick="myFunction()" type="submit" id="submit_modificacion">Guardar</button>
       </form>
         <!-- Botoon para guardar datos -->
         <input id="operacion" type="text" style="display:none;">
-        <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
         <input style="display: none;" type="text" id="presente">
   <script src="../js/register.js"></script>
   <script src="../js/login.js"></script>
