--- a/html/abmMaterias.html
+++ b/html/abmMaterias.html
@@ -85,6 +85,7 @@
         </div>
       </div>
     </div>
+    <button onclick="myFunction()" type="submit" id="submit_alta">Guardar</button>
   </form>
   <!-- Dar de baja una materia -->
   <form id="form_baja">
@@ -104,6 +105,7 @@
         </div>
       </div>
     </div>
+    <button onclick="myFunction()" type="submit" id="submit_baja">Guardar</button>
   </form>
     <!-- Modificar una materia -->
     <form id="form_modificacion">
@@ -129,10 +131,10 @@
         </div>
       </div>
     </div>
+    <button onclick="myFunction()" type="submit" id="submit_modificacion">Guardar</button>
   </form>
   <!-- Boton para guardar datos -->
   <input id="operacion" type="text" style="display:none;">
-  <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
   <script src="../js/register.js"></script>
   <script src="../js/login.js"></script>
   <script src="../js/library.js"></script>
