--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -128,6 +128,7 @@
                 </div>
             </div>
         </div>
+        <button onclick="myFunction()" type="submit" id="submit_alta">Guardar</button>
     </form>
     <form id="form_baja">
         <div class="baja">
@@ -146,6 +147,7 @@
                 </div>
             </div>
         </div>
+        <button onclick="myFunction()" type="submit" id="submit_baja">Guardar</button>
     </form>
     <form id="form_modificacion">
         <div class="modificacion">
@@ -216,10 +218,10 @@
                 </div>
             </div>
         </div>
+        <button onclick="myFunction()" type="submit" id="submit_modificacion">Guardar</button>
     </form>
     <!-- Boton para guardar datos -->
     <input id="operacion" type="text" style="display:none;">
-    <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
     <script>
         function myFunction() {
             var rc = new RegisterControllerRemote;
