Validate apuntado bien

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -158,7 +158,7 @@
       },
       "La contrase&ntilde;a debe contener al menos una mayuscula, una minuscula y un numero");
 
-    $(".alta").validate({
+    $(".form_alta").validate({
       rules: {
         carrera: {
           required: true
