fix jquery validate alta carrera

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -158,14 +158,14 @@
       },
       "La contrase&ntilde;a debe contener al menos una mayuscula, una minuscula y un numero");
 
-    $(".form_alta").validate({
+    $("#form_alta").validate({
       rules: {
-        carrera: {
+        carrera_alta: {
           required: true
         }
       },
       messages: {
-        carrera: {
+        carrera_alta: {
           required: "Este campo es obligatorio"
         }
       }
