--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -57,7 +57,7 @@
   <button id="btnModificacion" type="button">Modificacion Carrera</button>
   <br>
   <!-- Dar de alta una carrera -->
-  <form id="form_alta">
+  <form id="form_alta" class="alta">
     <div class="alta">
       <!-- Titulo -->
       <h1>Alta de carrera</h1>
@@ -75,7 +75,7 @@
     <button onclick="myFunction()" type="submit" id="submit_alta">Guardar</button>
   </form>
   <!-- Dar de baja una carrera -->
-  <form id="form_baja">
+  <form id="form_baja" class="baja">
     <div class="baja">
       <!-- Titulo -->
       <h1>Baja de carrera</h1>
@@ -95,7 +95,7 @@
     <button onclick="myFunction()" type="submit" id="submit_baja">Guardar</button>
   </form>
     <!-- Modificar una carrera -->
-    <form id="form_modificacion">
+    <form id="form_modificacion" class="modificacion">
       <div class="modificacion">
         <!-- Titulo -->
         <h1>Modificacion de carrera</h1>
