--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -67,35 +67,35 @@
                     <div class="col-md-4">
                         <!-- Seleccion de Carrera -->
                         <label>Carrera</label>
-                        <select class="carrera" id="carrera_alta">
+                        <select class="carrera empty" id="carrera_alta">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-3">
                         <!-- Seleccion de Catedra -->
                         <label>Catedra</label>
-                        <select class="catedra" id="catedra_alta">
+                        <select class="catedra empty" id="catedra_alta">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-3">
                         <label>Materia</label>
                         <!-- Seleccion de Materia -->
-                        <select class="materia" id="materia_alta">
+                        <select class="materia empty" id="materia_alta">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-3">
                         <label>Alumno</label>
                         <!-- Seleccion de Alumno -->
-                        <select class="alumnos" id="alumnos_alta">
+                        <select class="alumnos empty" id="alumnos_alta">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-3">
                         <label>Nota</label>
                         <!-- Seleccion de Nota -->
-                        <select class="nota" id="nota_alta">
+                        <select class="nota empty" id="nota_alta">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -123,28 +123,28 @@
                         <div class="col-md-4">
                             <!-- Seleccion de Carrera -->
                             <label>Carrera</label>
-                            <select class="carrera" id="carrera_baja">
+                            <select class="carrera empty" id="carrera_baja">
                                 <option></option>
                             </select>
                         </div>
                         <div class="col-md-4">
                             <!-- Seleccion de Catedra -->
                             <label>Catedra</label>
-                            <select class="catedra" id="catedra_baja">
+                            <select class="catedra empty" id="catedra_baja">
                                 <option></option>
                             </select>
                         </div>
                         <div class="col-md-4">
                             <label>Materia</label>
                             <!-- Seleccion de Materia -->
-                            <select class="materia" id="materia_baja">
+                            <select class="materia empty" id="materia_baja">
                                 <option></option>
                             </select>
                         </div>
                         <div class="col-md-4">
                             <label>Alumno</label>
                             <!-- Seleccion de Alumno -->
-                            <select class="alumnos" id="alumnos_baja">
+                            <select class="alumnos empty" id="alumnos_baja">
                                 <option></option>
                             </select>
                         </div>
@@ -163,35 +163,35 @@
                             <div class="col-md-4">
                                 <!-- Seleccion de Carrera -->
                                 <label>Carrera</label>
-                                <select class="carrera" id="carrera_modificacion">
+                                <select class="carrera empty" id="carrera_modificacion">
                                     <option></option>
                                 </select>
                             </div>
                             <div class="col-md-3">
                                 <!-- Seleccion de Catedra -->
                                 <label>Catedra</label>
-                                <select class="catedra" id="catedra_modificacion">
+                                <select class="catedra empty" id="catedra_modificacion">
                                     <option></option>
                                 </select>
                             </div>
                             <div class="col-md-3">
                                 <label>Materia</label>
                                 <!-- Seleccion de Materia -->
-                                <select class="materia" id="materia_modificacion">
+                                <select class="materia empty" id="materia_modificacion">
                                     <option></option>
                                 </select>
                             </div>
                             <div class="col-md-3">
                                 <label>Alumno</label>
                                 <!-- Seleccion de Alumno -->
-                                <select class="alumnos" id="alumnos_modificacion">
+                                <select class="alumnos empty" id="alumnos_modificacion">
                                     <option></option>
                                 </select>
                             </div>
                             <div class="col-md-3">
                                 <label>Nota</label>
                                 <!-- Seleccion de Nota -->
-                                <select class="nota" id="nota_modificacion">
+                                <select class="nota empty" id="nota_modificacion">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
