--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -61,7 +61,7 @@
                     <div>
                         <!-- Seleccion de Rol -->
                         <label>Rol</label>
-                        <select class="rol" id="rol_alta">
+                        <select class="rol empty" id="rol_alta">
                             <option value="administrador">Administrador</option>
                             <option value="alumno">Alumno</option>
                             <option value="profesor">Profesor</option>
@@ -70,27 +70,27 @@
                     <div>
                         <!-- Input de Nombre -->
                         <label>Nombre</label>
-                        <input type="text" id="nombre_alta">
+                        <input type="text" class="empty" id="nombre_alta">
                     </div>
                     <div>
                         <!-- Input de Apellido -->
                         <label>Apellido</label>
-                        <input type="text" id="apellido_alta">
+                        <input type="text" class="empty" id="apellido_alta">
                     </div>
                     <div>
                         <!-- Input de Documento -->
                         <label>Documento</label>
-                        <input type="number" id="documento_alta">
+                        <input type="number" class="empty" id="documento_alta">
                     </div>
                     <div>
                         <!-- Input de Fecha de Nacimiento -->
                         <label>Fecha de Nacimiento</label>
-                        <input type="date" id="fnac_alta">
+                        <input type="date" class="empty" id="fnac_alta">
                     </div>
                     <div>
                         <!-- Seleccion de Documento -->
                         <label>Genero</label>
-                        <select class="genero" id="genero_alta">
+                        <select class="genero empty" id="genero_alta">
                             <option value="masculino">Masculino</option>
                             <option value="femenino">Femenino</option>
                         </select>
@@ -98,32 +98,32 @@
                     <div>
                         <!-- Input de Domicilio -->
                         <label>Domicilio</label>
-                        <input type="text" id="domicilio_alta">
+                        <input type="text" class="empty" id="domicilio_alta">
                     </div>
                     <div>
                         <!-- Input de Telefono -->
                         <label>Telefono</label>
-                        <input type="number" id="telefono_alta">
+                        <input type="number" class="empty" id="telefono_alta">
                     </div>
                     <div>
                         <!-- Input de Matricula -->
                         <label>Matricula</label>
-                        <input type="number" id="matricula_alta">
+                        <input type="number" class="empty" id="matricula_alta">
                     </div>
                     <div>
                         <!-- Input de Mail -->
                         <label>Mail</label>
-                        <input type="text" id="mail_alta">
+                        <input type="text" class="empty" id="mail_alta">
                     </div>
                     <div>
                         <!-- Input de Contraseña -->
                         <label>Contraseña</label>
-                        <input type="password" id="pass_alta">
+                        <input type="password" class="empty" id="pass_alta">
                     </div>
                     <div>
                         <!-- Input de Confirmar Contraseña -->
                         <label>Confirmar Contraseña</label>
-                        <input type="password" id="confirm_pass_alta">
+                        <input type="password" class="empty" id="confirm_pass_alta">
                     </div>
                 </div>
             </div>
